[gd_scene load_steps=49 format=2]

[ext_resource path="res://Enemies/andrew_tate_v01.png" type="Texture" id=1]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://boxes/hit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/player_detection.tscn" type="PackedScene" id=4]
[ext_resource path="res://stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://boxes/hurt.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/wandercontroller.tscn" type="PackedScene" id=7]
[ext_resource path="res://boxes/softcollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/swordhit.gd" type="Script" id=9]
[ext_resource path="res://Enemies/Andrew.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[sub_resource type="Animation" id=14]
resource_name = "Attack left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ), Vector2( 5, 3 ), Vector2( 6, 3 ), Vector2( 7, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitboxpivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxpivot/swordhitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "Idle Right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Idle Up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Idle down"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Idle left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AndrewTateV01:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxpivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -180.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "attack down"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitboxpivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxpivot/swordhitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=20]
resource_name = "attack right"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ), Vector2( 4, 2 ), Vector2( 5, 2 ), Vector2( 6, 2 ), Vector2( 7, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitboxpivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxpivot/swordhitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=21]
resource_name = "attack up"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitboxpivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxpivot/swordhitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37 ]
}

[sub_resource type="Animation" id=4]
resource_name = "left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=5]
resource_name = "right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=6]
resource_name = "up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AndrewTateV01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45 ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Idle left"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Idle down"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Idle Right"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Idle Up"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "left"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "right"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "down"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "up"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 0.9, 0 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "left"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "attack right"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "attack down"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "attack up"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Idle/node = SubResource( 26 )
states/Idle/position = Vector2( 414, 104 )
states/Walking/node = SubResource( 11 )
states/Walking/position = Vector2( 580, 104 )
states/attack/node = SubResource( 31 )
states/attack/position = Vector2( 414, 189 )
transitions = [ "Idle", "Walking", SubResource( 32 ), "Walking", "Idle", SubResource( 33 ), "Idle", "attack", SubResource( 34 ), "attack", "Idle", SubResource( 35 ) ]
start_node = "Idle"
graph_offset = Vector2( -6, 46 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="CircleShape2D" id=36]
radius = 54.037

[sub_resource type="CapsuleShape2D" id=37]
height = 12.0

[sub_resource type="CapsuleShape2D" id=38]
radius = 6.0

[node name="Andrew" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="AndrewTateV01" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Attack left" = SubResource( 14 )
"anims/Idle Right" = SubResource( 15 )
"anims/Idle Up" = SubResource( 16 )
"anims/Idle down" = SubResource( 17 )
"anims/Idle left" = SubResource( 18 )
anims/RESET = SubResource( 2 )
"anims/attack down" = SubResource( 19 )
"anims/attack right" = SubResource( 20 )
"anims/attack up" = SubResource( 21 )
anims/down = SubResource( 3 )
anims/left = SubResource( 4 )
anims/right = SubResource( 5 )
anims/up = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walking/blend_position = Vector2( 0.00316954, 0.99569 )
parameters/attack/blend_position = Vector2( -0.0190175, 0.0317585 )

[node name="softcollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="softcollision" index="0"]
visible = false
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="player_detection" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="player_detection" index="0"]
modulate = Color( 0.882353, 0.109804, 0.109804, 0.541176 )
shape = SubResource( 36 )

[node name="hitboxpivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )
rotation = -3.14159

[node name="swordhitbox" parent="hitboxpivot" instance=ExtResource( 3 )]
position = Vector2( 15, -1 )
collision_mask = 16
script = ExtResource( 9 )

[node name="CollisionShape2D" parent="hitboxpivot/swordhitbox" index="0"]
shape = SubResource( 37 )

[node name="stats" parent="." instance=ExtResource( 5 )]
max_health = 100

[node name="wandercontroller" parent="." instance=ExtResource( 7 )]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
position = Vector2( -9, -26 )

[node name="hurt" parent="." instance=ExtResource( 6 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurt"]
position = Vector2( 0, -2 )
shape = SubResource( 38 )

[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="hurt" to="." method="_on_hurt_area_entered"]

[editable path="softcollision"]
[editable path="player_detection"]
[editable path="hitboxpivot/swordhitbox"]
